fix(a11y): fixed color contrast on homepage (iss1351) (#1372)

--- a/packages/patternfly-4/src/styles/_homepage.scss
+++ b/packages/patternfly-4/src/styles/_homepage.scss
@@ -62,30 +62,30 @@ $block: '.pf4';
   width: 100%;
   max-width: 100%;
   height: 100%;
-  background-image: none, linear-gradient(to bottom, #065e8e 0%, #0469a8 25%, #048bc1 75%, #03b9e4 100%);
+  background-image: none, linear-gradient(to bottom, #004080, #0066cc);
   background-repeat: no-repeat, no-repeat;
   background-position: top, right;
 
   /* stylelint-disable */
   @media (max-width: $pf-global--breakpoint--sm) and (-webkit-min-device-pixel-ratio: 2),
     (max-width: $pf-global--breakpoint--sm) and (min-resolution: 192dpi) {
-    background-image: none, linear-gradient(to bottom, #065e8e 0%, #0469a8 25%, #048bc1 75%, #03b9e4 100%);
+    background-image: none, linear-gradient(to bottom, #004080, #0066cc);
   }
 
   @media (min-width: $pf-global--breakpoint--sm) {
     background-size: contain;
-    background-image: url("./images/aboutPF4Lines.svg"), linear-gradient(to bottom, #065e8e 0%, #0469a8 25%, #048bc1 75%, #03b9e4 100%);
+    background-image: url("./images/aboutPF4Lines.svg"), linear-gradient(to bottom, #004080, #0066cc);
   }
 
   @media (min-width: $pf-global--breakpoint--sm) and (-webkit-min-device-pixel-ratio: 2),
     (min-width: $pf-global--breakpoint--sm) and (min-resolution: 192dpi) {
-    background-image: url("./images/aboutPF4Lines.svg"), linear-gradient(to bottom, #065e8e 0%, #0469a8 25%, #048bc1 75%, #03b9e4 100%);
+    background-image: url("./images/aboutPF4Lines.svg"), linear-gradient(to bottom, #004080, #0066cc);
     background-size: cover;
     background-position: top right, right;
   }
 
   @media (min-width: $pf-global--breakpoint--lg) {
-    background-image: var(--pf4-c-image--Background), linear-gradient(to bottom, #065e8e 0%, #0469a8 25%, #048bc1 75%, #03b9e4 100%);
+    background-image: var(--pf4-c-image--Background), linear-gradient(to bottom, #004080, #0066cc);
     background-size: cover;
     background-position: top, right;
   }
@@ -95,12 +95,12 @@ $block: '.pf4';
 #{$block}-c-background-image-principles {
   width: 100%;
   max-width: 100%;
-  background-image: url("./images/PF4PrinciplesLines.svg"), linear-gradient(to bottom, #03b9e4, #2767b2);
+  background-image: url("./images/PF4PrinciplesLines.svg"), linear-gradient(to bottom, #0066cc, #004080);
   background-repeat: no-repeat, no-repeat;
   background-position: top right, right;
 
   @media (max-width: $pf-global--breakpoint--sm) {
-    background-image: none, linear-gradient(to bottom, #03b9e4, #2767b2);
+    background-image: none, linear-gradient(to bottom, #0066cc, #004080);
   }
 }
 
